* Roboto-Bold.ttf: Working on UI design
* App.xaml:
* Info.plist:
* CalendarView.cs:
* Calendar.cs:
* LoginPage.xaml:
* WelcomePage.xaml:
* DataAccess.cs:
* SettingsPage.xaml:
* CalendarPage.xaml:
* ManageGo.iOS.csproj:
* CalendarRenderer.cs:
* CalendarEvent.cs:
* PaymentsPage.xaml:
* CustomSwitch.cs:
* StringToBoolConverter.cs:
* MasterMenuPage.xaml:
* checked.png:
* CalendarView.xaml:
* PaymentsPage.xaml.cs:
* CalendarPage.xaml.cs:
* SettingsPage.xaml.cs:
* unchecked.png:
* CustomSwitchRenderer.cs:
* CreateTicketPage.xaml:
* CalendarViewPage.cs:
* CalendarRenderer.cs:
* checked@2x.png:
* checked@3x.png:
* BuildingsListPage.xaml:
* NotificationsPage.xaml:
* CalendarView.xaml.cs:
* Roboto-Thin.ttf:
* unchecked@2x.png:
* unchecked@3x.png:
* CalendarPageModel.cs:
* SettingsPageModel.cs:
* NotificationsPage.xaml.cs:
* filled_circle.png:
* Roboto-Light.ttf:
* CustomSwitchRenderer.cs:
* ManageGo.Android.csproj:
* InfiniteScrollViewSource.cs:
* Roboto-Medium.ttf:
* EditTicketDetailsView.xaml:
* Roboto-Regular.ttf:
* MaintenanceTicketsPage.xaml:
* checked.png:
* AndroidManifest.xml:
* unchecked.png:
* checked.png:
* checked.png:
* checked.png:
* unchecked.png:
* unchecked.png:
* checked.png:
* unchecked.png:
* unchecked.png:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -39,6 +39,54 @@
                 <Setter Property="FontSize" Value="Small" />
                 <Setter Property="TextColor" Value="#a7a9ac" />
             </Style>
+            
+            
+            <Style TargetType="Label">
+                <Style.Triggers>
+                    <Trigger TargetType="Label" Property="FontAttributes" Value="Bold">
+                        <Setter Property="FontFamily"  >
+                            <Setter.Value>
+                                <OnPlatform
+                                    x:TypeArguments="x:String"
+                                    iOS="Roboto Bold"
+                                    Android="Roboto-Bold.ttf#Roboto Bold" />
+                            </Setter.Value>
+                        </Setter>
+                    </Trigger>
+                </Style.Triggers>
+                <Setter Property="FontFamily">
+                    <Setter.Value>
+                        <OnPlatform
+                            x:TypeArguments="x:String"
+                            iOS="Roboto"
+                            Android="Roboto-Regular.ttf#Roboto" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+             <Style TargetType="Button">
+                <Setter Property="FontFamily">
+                    <Setter.Value>
+                        <OnPlatform
+                            x:TypeArguments="x:String"
+                            iOS="Roboto"
+                            Android="Roboto-Regular.ttf#Roboto" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style TargetType="Entry">
+                <Setter Property="FontFamily">
+                    <Setter.Value>
+                        <OnPlatform
+                            x:TypeArguments="x:String"
+                            iOS="Roboto"
+                            Android="Roboto-Regular.ttf#Roboto" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
