--- a/ManageGo/Views/BuildingsListPage.xaml
+++ b/ManageGo/Views/BuildingsListPage.xaml
@@ -32,7 +32,7 @@
             </StackLayout>
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
                 <Label Text="Buildings" TextColor="{StaticResource Grey-Dark-1}"  FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
-                <BoxView HeightRequest="1" BackgroundColor="#85bafa" />
+                <BoxView HeightRequest="1" BackgroundColor="{StaticResource Primary}" />
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
                 <ListView ItemsSource="{Binding Buildings}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18" CachingStrategy="RecycleElement">
@@ -44,7 +44,7 @@
                                         <Image Source="building_grey.png" Margin="8,6,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
                                             <Label Text="{Binding BuildingName}" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" />
-                                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                                             <StackLayout Orientation="Horizontal" Spacing="4">
                                                 <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
                                                     <Label Text="Units:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
@@ -53,7 +53,7 @@
                                                         <TapGestureRecognizer Command="{Binding BindingContext.OnUnitTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
                                                     </StackLayout.GestureRecognizers>
                                                 </StackLayout>
-                                                <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" VerticalOptions="Fill"/>
+                                                <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" VerticalOptions="Fill"/>
                                                 <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
                                                     <Label Text="Tenants:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding TenantCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
@@ -61,7 +61,7 @@
                                                         <TapGestureRecognizer Command="{Binding BindingContext.OnTenantTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
                                                     </StackLayout.GestureRecognizers>
                                                 </StackLayout>
-                                                <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" VerticalOptions="Fill"/>
+                                                <BoxView WidthRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" VerticalOptions="Fill"/>
                                                 <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand" Spacing="2">
                                                     <Label Text="Open tickets:" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding OpenTicketCount, Converter={StaticResource PaddedStringConverter}}" TextColor="{StaticResource Primary}" FontSize="Small"/>
