--- a/ManageGo/Views/CreateTicketPage.xaml
+++ b/ManageGo/Views/CreateTicketPage.xaml
@@ -29,7 +29,7 @@
         </StackLayout>
         <StackLayout Spacing="0" Grid.Row="1">
             <Label  Text="Create Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
-            <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
+            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}"/>
         </StackLayout>
         <ScrollView Grid.Row="2" BackgroundColor="{StaticResource Grey-Light-2}">
             <StackLayout >
@@ -38,7 +38,7 @@
                     <StackLayout>
                         <Label Text="Subject:"  TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold"/>
                         <local:CustomEntry Text="{Binding Subject}" TextColor="{StaticResource Grey-Dark-1}" Placeholder="Type here..." Margin="-4,0,0,0"/>
-                        <BoxView HeightRequest="0.5" Margin="0,14,0,14" BackgroundColor="{StaticResource Grey-Light-1}"/>
+                        <BoxView HeightRequest="0.5" Margin="0,14,0,14" BackgroundColor="{StaticResource Grey-Light-2}"/>
                         <Label Text="Message:" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold"/>
                         <controls:BorderlessEditor Text="{Binding Comment}" TextColor="{StaticResource Grey-Dark-1}" Margin="-4,0,0,0" HeightRequest="150" Placeholder="Type here..." />
                         <StackLayout IsVisible="{Binding HasAttachment}" Padding="8,0,8,0" Orientation="Horizontal" BackgroundColor="{StaticResource Grey-Light-2}" HorizontalOptions="FillAndExpand">
@@ -49,7 +49,7 @@
                                 </Image.GestureRecognizers>
                             </Image>
                         </StackLayout>
-                        <BoxView HeightRequest="0.5" Margin="0,14,0,14" BackgroundColor="{StaticResource Grey-Light-1}"/>
+                        <BoxView HeightRequest="0.5" Margin="0,14,0,14" BackgroundColor="{StaticResource Grey-Light-2}"/>
                         <Button Image="clip.png" Command="{Binding OnAttachButtonTapped}" HorizontalOptions="Start" BackgroundColor="Transparent" />
                     </StackLayout>
                 </Frame> 
@@ -60,7 +60,7 @@
                             <Label Text="Ticket details" TextColor="{StaticResource Grey-Dark-1}"/>
                         </StackLayout>
                         
-                        <BoxView HeightRequest="0.5" Margin="0,14,0,14" BackgroundColor="{StaticResource Grey-Light-1}"/>
+                        <BoxView HeightRequest="0.5" Margin="0,14,0,14" BackgroundColor="{StaticResource Grey-Light-2}"/>
                         
                          <Grid Padding="21,17,21,17" RowSpacing="12">
                     <Grid.ColumnDefinitions>
@@ -88,9 +88,9 @@
                         <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
                     <Label Text="Address  " FontSize="Small" Grid.Column="0" Grid.Row="0" TextColor="{StaticResource Key=Grey-Mid-1}"/>
-                    <BoxView Grid.Row="1" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="1" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Unit" FontSize="Small" Grid.Column="0" Grid.Row="2" TextColor="{StaticResource Key=Grey-Mid-1}"/>
-                    <BoxView Grid.Row="3" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="3" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Tenant" FontSize="Small" Grid.Column="0" Grid.Row="4" TextColor="{StaticResource Key=Grey-Mid-1}"/>
                     <Frame HasShadow="false" BorderColor="{StaticResource Grey-Light-1}" CornerRadius="0" Grid.ColumnSpan="2" BackgroundColor="{StaticResource Key=Grey-Light-2}" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Row="6" Padding="8,12,0,12">
                         <StackLayout Orientation="Horizontal">
@@ -103,13 +103,13 @@
                         
                     </Frame>
                     <Label Text="Priority" IsVisible="{Binding ExtraDetailRowsAreVisible}" FontSize="Small" Grid.Column="0" Grid.Row="8" TextColor="{StaticResource Key=Grey-Mid-1}"/>
-                    <BoxView Grid.Row="9" IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="9" IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Category" IsVisible="{Binding ExtraDetailRowsAreVisible}" FontSize="Small" Grid.Column="0" Grid.Row="10" TextColor="{StaticResource Key=Grey-Mid-1}"/>
-                    <BoxView Grid.Row="11" IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="11" IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Tags" IsVisible="{Binding ExtraDetailRowsAreVisible}" FontSize="Small" Grid.Column="0" Grid.Row="12" TextColor="{StaticResource Key=Grey-Mid-1}"/>
-                    <BoxView Grid.Row="13"  IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="13"  IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Assigned" IsVisible="{Binding ExtraDetailRowsAreVisible}" FontSize="Small" Grid.Column="0" Grid.Row="14" TextColor="{StaticResource Key=Grey-Mid-1}"/>
-                     <BoxView Grid.Row="15" IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                     <BoxView Grid.Row="15" IsVisible="{Binding ExtraDetailRowsAreVisible}" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Due date" IsVisible="{Binding ExtraDetailRowsAreVisible}" FontSize="Small" Grid.Column="0" Grid.Row="16" TextColor="{StaticResource Key=Grey-Mid-1}"/>
                         
                     <!-- second column for Address selection -->
@@ -122,7 +122,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding AddressOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Buildings}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -151,7 +151,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding UnitOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Units}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -180,7 +180,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding TenantOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView ItemsSource="{Binding Tenants}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -224,7 +224,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding PriorityOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <StackLayout Orientation="Horizontal" Padding="0,8,0,8">
                                 <Image Source="{Binding LowPriorityRadioIcon}" />
                                 <Label Text="Low" TextColor="{StaticResource Grey-Mid-1}"/>
@@ -259,7 +259,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding CategoryOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Categories}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -288,7 +288,7 @@
                                 </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding TagOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Tags}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -318,7 +318,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding AssignedOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Users}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -383,7 +383,7 @@
                 </StackLayout.GestureRecognizers>
                 </StackLayout>
                 
-                <BoxView HeightRequest="0.5" BackgroundColor="#e0e0e0" />
+                <BoxView HeightRequest="0.5" BackgroundColor="{StaticResource Grey-Light-2}" />
                 
                 <StackLayout Orientation="Horizontal" Margin="22,8,0,8" >
                     <Image WidthRequest="47" HeightRequest="47" VerticalOptions="CenterAndExpand" Source="camera_2.png" />
@@ -395,7 +395,7 @@
                 
                
                 
-                <BoxView HeightRequest="0.5" BackgroundColor="#e0e0e0" />
+                <BoxView HeightRequest="0.5" BackgroundColor="{StaticResource Grey-Light-2}" />
                 
                  <StackLayout Orientation="Horizontal" Margin="22,8,0,16" >
                     <Image WidthRequest="47" HeightRequest="47" VerticalOptions="CenterAndExpand" Source="camera_3.png" />
