--- a/ManageGo/Views/EditTicketDetailsView.xaml
+++ b/ManageGo/Views/EditTicketDetailsView.xaml
@@ -29,19 +29,19 @@
                         <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
                     <Label Text="Tenant" FontSize="Small" Grid.Column="0" Grid.Row="0" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <BoxView Grid.Row="1" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="1" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Address" FontSize="Small" Grid.Column="0" Grid.Row="2" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <BoxView Grid.Row="3" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="3" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Priority" FontSize="Small" Grid.Column="0" Grid.Row="4" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <BoxView Grid.Row="5" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="5" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Category" FontSize="Small" Grid.Column="0" Grid.Row="6" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <BoxView Grid.Row="7" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="7" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Tags" FontSize="Small" Grid.Column="0" Grid.Row="8" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <BoxView Grid.Row="9" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="9" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Assigned" FontSize="Small" Grid.Column="0" Grid.Row="10" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <BoxView Grid.Row="11" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="11" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Due date" FontSize="Small" Grid.Column="0" Grid.Row="12" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <BoxView Grid.Row="13" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
+                    <BoxView Grid.Row="13" HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
                     <Label Text="Status" FontSize="Small" Grid.Column="0" Grid.Row="14" TextColor="{StaticResource Key=Grey-Light-1}"/>
                     <StackLayout Grid.ColumnSpan="2" Grid.Row="12">
                         <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
@@ -66,7 +66,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding PriorityOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <StackLayout Orientation="Horizontal" Padding="0,8,0,8">
                                 <Image Source="{Binding LowPriorityRadioIcon}" />
                                 <Label Text="Low" TextColor="{StaticResource Grey-Mid-1}"/>
@@ -100,7 +100,7 @@
                                 </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding CategoryOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Categories}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -128,7 +128,7 @@
                                 </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding TagOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Tags}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
@@ -158,7 +158,7 @@
                             </StackLayout.GestureRecognizers>
                         </StackLayout>
                         <StackLayout IsVisible="{Binding AssignedOptionsVisible}">
-                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}" />
                             <controls:NestedListView  ItemsSource="{Binding Users}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
                                  <ListView.ItemTemplate>
                                     <DataTemplate>
