--- a/ManageGo/Views/LoginPage.xaml
+++ b/ManageGo/Views/LoginPage.xaml
@@ -14,16 +14,16 @@
         <StackLayout Orientation="Horizontal" Padding="8" HeightRequest="42">
             <Image Source="logo.png"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
-        <Label Text="Welcome" FontSize="Large" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
+        <Label Text="Welcome" TextColor="{StaticResource Grey-Dark-1}" FontSize="Large" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
         <BoxView HeightRequest="1" Margin="0,8,0,8" BackgroundColor="{x:StaticResource Primary}" HorizontalOptions="FillAndExpand"/>
         <ScrollView BackgroundColor="#f9fafb" VerticalOptions="FillAndExpand">
             <StackLayout VerticalOptions="CenterAndExpand" Padding="53,0,52,0">
                 <Label Text="Email address:" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
                 <local:CustomEntry Placeholder="Enter your email" Text="{Binding UserEmail}" />
-                <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="Gray" />
+                <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
                 <Label Text="Password:" Margin="0,35,0,0" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
                 <local:CustomEntry Placeholder="Password" Text="{Binding UserPassword}" />
-                <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="Gray" />
+                <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
                 <StackLayout IsVisible="{Binding IsBiometricsLabelVisible}" Orientation="Horizontal" Padding="17,22,17,22" HorizontalOptions="CenterAndExpand">
                     <Image Source="{Binding AuthCheckBoxIcon}" VerticalOptions="CenterAndExpand"/>
                     <Label Text="{Binding AuthString}" HorizontalTextAlignment="Center" VerticalOptions="Center" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" />
@@ -79,10 +79,9 @@
                     <StackLayout>
                         <Label Text="Email address:" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
                         <local:CustomEntry Placeholder="Enter your email" WidthRequest="250" Text="{Binding UserEmail}" />
-                        <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="Gray" />
+                        <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
                         <Button Command="{Binding OnSubmitResetPasswordTapped}" BackgroundColor="{x:StaticResource Primary}" WidthRequest="150" HorizontalOptions="CenterAndExpand" Text="Reset Password" FontSize="Small" Margin="0,12,0,0" TextColor="White" />
                         <Button BackgroundColor="Transparent" WidthRequest="150" HorizontalOptions="CenterAndExpand" Text="Cancel" Command="{Binding OnCancelResetPasswordTapped}" Margin="0,4,0,0" FontSize="Small" TextColor="{StaticResource Primary}" />
-
                     </StackLayout>
                 </Frame>
             </StackLayout>
