--- a/ManageGo/Views/MasterMenuPage.xaml
+++ b/ManageGo/Views/MasterMenuPage.xaml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage 
     xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
-             ios:Page.UseSafeArea="true"
-    xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.MasterMenuPage">
+            ios:Page.UseSafeArea="true"
+            BackgroundColor="White"
+            xmlns="http://xamarin.com/schemas/2014/forms" 
+            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+            x:Class="ManageGo.MasterMenuPage">
     <ContentPage.Resources>
          <ResourceDictionary>
             <Style TargetType="BoxView">
-                <Setter Property="HeightRequest" Value="0.5" />
+                <Setter Property="HeightRequest" Value="1" />
                 <Setter Property="HorizontalOptions" Value="FillAndExpand" />
-                <Setter Property="BackgroundColor" Value="#808285" />
+                <Setter Property="BackgroundColor" Value="{StaticResource Grey-Light-2}" />
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -29,57 +32,57 @@
         <ScrollView>
             <StackLayout Padding="24,8,0,0" Spacing="0">
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Home" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Home" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Home" Command="{Binding OnHomeTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Payments" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Payments" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Payments" Command="{Binding PaymentsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Bank transactions" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Bank transactions" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Bank transactions" Command="{Binding OnTransactionsTapped}" VerticalOptions="CenterAndExpand" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="FillAndExpand"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Maintenance" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Maintenance" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Maintenance" Command="{Binding OnMaintenanceTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Calendar" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Calendar" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Calendar" Command="{Binding OnCalendarPageTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Buildings" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Buildings" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Buildings" Command="{Binding OnBuildingsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Tenants" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Tenants" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Tenants" Command="{Binding OnTenantsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Settings" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Settings" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Settings" Command="{Binding OnSettingsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                    <Label Text="Feedback" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                    <Label Text="Feedback" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Feedback" Command="{Binding OnFeedbackTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
-                     <Label Text="Logout" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium" FontAttributes="Bold" VerticalOptions="CenterAndExpand" />
+                     <Label Text="Logout" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
                     <Button Text="Logout" Command="{Binding OnLogoutTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
                 </Grid>
-                <BoxView />
-                <Label Text="Contact us" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" FontSize="Small" Margin="0,24,0,0" />
+                <BoxView BackgroundColor="{StaticResource Grey-Light-1}"/>
+                <Label Text="Contact us" TextColor="{StaticResource Grey-Dark-1}"  FontSize="Small" Margin="0,24,0,0" />
                 <StackLayout Orientation="Horizontal" Margin="0,8,0,0">
                     <Label Text="Email: " TextColor="Gray" FontSize="Small"/>
                     <Label Text="support@managego.com" TextColor="#318bfa" FontSize="Small">
