--- a/ManageGo/Views/PaymentsPage.xaml
+++ b/ManageGo/Views/PaymentsPage.xaml
@@ -3,12 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
+             BackgroundColor="{StaticResource Grey-Light-2}"
              x:Name="ThisPage"
              xmlns:local="clr-namespace:ManageGo"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Class="ManageGo.PaymentsPage">
     <ContentPage.Resources>
         <local:InverseBoolConverter x:Key="InverseBoolConverter" />
+        <local:StringToBoolConverter x:Key="StringToBoolConverter" />
     </ContentPage.Resources>
     <RelativeLayout>
         <Grid RowSpacing="0"
@@ -78,8 +80,8 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="8">
-                                    <StackLayout Orientation="Horizontal" Spacing="17">
+                                <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="14">
+                                    <StackLayout Orientation="Horizontal" Margin="0,12,0,12" Spacing="22">
                                         <Label Text="&#11044;" TextColor="{Binding StatusColor}" FontSize="Small" HorizontalOptions="Center" Margin="8,6,0,0" VerticalOptions="StartAndExpand"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
                                             <StackLayout Orientation="Horizontal">
@@ -100,21 +102,21 @@
                                                     </StackLayout.GestureRecognizers>
                                                 </StackLayout>
                                             </StackLayout>
-                                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                                            <BoxView HeightRequest="1" Margin="0,8,0,8" BackgroundColor="{StaticResource Grey-Light-2}" />
                                             <StackLayout Orientation="Horizontal" >
                                                 <Image Source="profile_grey.png" HorizontalOptions="Center" VerticalOptions="Center"/>
                                                 <Label Text="{Binding FormattedTenantDetails}" Margin="4,0,0,0" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                             </StackLayout>
-                                            <StackLayout IsVisible="{Binding DetailsShown}" Padding="0,0,8,0" HorizontalOptions="FillAndExpand">
-                                                <StackLayout Orientation="Horizontal">
-                                                    <Label Text="Amount:" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
+                                            <StackLayout IsVisible="{Binding DetailsShown}" Spacing="12" Padding="0,12,12,0" HorizontalOptions="FillAndExpand">
+                                                <StackLayout Orientation="Horizontal" >
+                                                    <Label Text="Rent amount:" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding Amount,StringFormat={StaticResource FormatDecimalToCurrency}}" HorizontalOptions="EndAndExpand" HorizontalTextAlignment="End" FontSize="Small" TextColor="{StaticResource Grey-Mid-2}" />
                                                 </StackLayout>
-                                                <StackLayout Orientation="Horizontal">
+                                                <StackLayout Orientation="Horizontal" IsVisible="{Binding OtherFee}">
                                                     <Label Text="Late fee:" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding OtherFee,StringFormat={StaticResource FormatDecimalToCurrency}}" HorizontalOptions="EndAndExpand" HorizontalTextAlignment="End" FontSize="Small" TextColor="{StaticResource Grey-Mid-2}" />
                                                 </StackLayout>
-                                                <StackLayout Orientation="Horizontal">
+                                                <StackLayout Orientation="Horizontal" IsVisible="{Binding TenantFee}">
                                                     <Label Text="Tenant fee:" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding TenantFee,StringFormat={StaticResource FormatDecimalToCurrency}}" HorizontalOptions="EndAndExpand" HorizontalTextAlignment="End" FontSize="Small" TextColor="{StaticResource Grey-Mid-2}" />
                                                 </StackLayout>
@@ -122,7 +124,7 @@
                                                     <Label Text="Payment total:" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Grey-Light-1}" />
                                                     <Label Text="{Binding TotalAmountAndFees,StringFormat={StaticResource FormatDecimalToCurrency}}" HorizontalOptions="EndAndExpand" HorizontalTextAlignment="End" FontSize="Small" TextColor="{StaticResource Grey-Mid-2}" />
                                                 </StackLayout>
-                                                <BoxView HeightRequest="1" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Key=Grey-Light-2}"/>
+                                                <BoxView HeightRequest="1" Margin="0,8,0,8" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Key=Grey-Light-2}"/>
                                                 <StackLayout Orientation="Horizontal">
                                                     <Image Source="bank_blue.png" VerticalOptions="Center"/>
                                                     <Label Text="{Binding PaymentAcctUsed}" TextColor="{StaticResource Key=Grey-Light-1}" FontSize="Small" VerticalOptions="Center"/>
@@ -137,13 +139,13 @@
                                                         <Label Text="{Binding BankTransactionNumber}" FontSize="Small" HorizontalOptions="Start" TextColor="{StaticResource Primary}" />
                                                     </StackLayout>
                                                 </StackLayout>
-                                                <BoxView HeightRequest="1" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Key=Grey-Light-2}"/>
+                                                <BoxView HeightRequest="1" Margin="0,8,0,8" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Key=Grey-Light-2}"/>
                                                 <StackLayout Orientation="Horizontal">
                                                     <Label Text="&#11044;" TextColor="{Binding StatusColor}" FontSize="Small" HorizontalOptions="Start" VerticalOptions="Center"/>
                                                     <Label Text="{Binding TransactionStatus}" HorizontalTextAlignment="Start" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" VerticalOptions="Center" />
                                                 </StackLayout>
-                                                <BoxView HeightRequest="1" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Key=Grey-Light-2}"/>
-                                                <StackLayout Orientation="Horizontal">
+                                                <BoxView HeightRequest="1" Margin="0,8,0,8" VerticalOptions="Start" HorizontalOptions="FillAndExpand" BackgroundColor="{StaticResource Key=Grey-Light-2}"/>
+                                                <StackLayout Orientation="Horizontal" IsVisible="{Binding PaymentNote,Converter={StaticResource StringToBoolConverter}}">
                                                     <Label Text="Payment note: " TextColor="{StaticResource Grey-Light-1}" FontSize="Small"  />
                                                     <Label Text="{Binding PaymentNote}" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" />
                                                 </StackLayout>
