--- a/ManageGo/Views/WelcomePage.xaml
+++ b/ManageGo/Views/WelcomePage.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
               xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true" 
-              BackgroundColor="#f9fafb"
+              BackgroundColor="White"
              x:Name="ThisPage"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.WelcomePage">
     <StackLayout Spacing="0">
-        
         <StackLayout Orientation="Horizontal" Padding="8" HeightRequest="42">
             <Button BackgroundColor="Transparent"
                     Command="{Binding OnMasterMenuTapped}"
@@ -17,11 +16,12 @@
                     Image="nav_menu_icon.png" />
             <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
-        <ScrollView BackgroundColor="#f9fafb" VerticalOptions="FillAndExpand">
+        <ScrollView  VerticalOptions="FillAndExpand">
             <StackLayout Spacing="0">
-                <Label Text="Welcome" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Small" HorizontalTextAlignment="Center"/>
+                <Label Text="Welcome"  FontAttributes="Bold" Margin="0,8,0,7" FontSize="Small" HorizontalTextAlignment="Center"/>
                 <Image Source="dashboard_1.jpg" HorizontalOptions="Center" VerticalOptions="Start"/>
-                <Frame IsVisible="{Binding UserCanViewPayments}" Margin="12" Padding="0,8,0,12" HasShadow="false">
+                <StackLayout VerticalOptions="FillAndExpand" BackgroundColor="{StaticResource Grey-Light-2}">
+                <Frame IsVisible="{Binding UserCanViewPayments}" Margin="24,22,24,12" Padding="0,8,0,6" HasShadow="false">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
@@ -44,7 +44,7 @@
                         </StackLayout>
                     </Grid>
                 </Frame>
-                <Frame IsVisible="{Binding UserCanViewTickets}" Margin="12" Padding="0,8,0,12" HasShadow="false">
+                <Frame IsVisible="{Binding UserCanViewTickets}" Margin="24,6,24,12" Padding="0,8,0,12" HasShadow="false">
                     <Grid >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
@@ -69,22 +69,23 @@
                        
                     </Grid>
                 </Frame>
-                    <StackLayout VerticalOptions="CenterAndExpand" IsVisible="{Binding HasLoaded}">
-                       <Label Text="{Binding Path=PMCName}" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalOptions="Center"/>
-                       <Label Text="Open the menu to get started" FontSize="Micro" TextColor="#58595b" HorizontalTextAlignment="Center" >
+                <StackLayout VerticalOptions="CenterAndExpand" IsVisible="{Binding HasLoaded}">
+                       <Label Text="{Binding Path=PMCName}" FontSize="Medium" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalOptions="Center"/>
+                       <Label Text="Open the menu to get started" FontSize="Small" TextColor="#58595b" HorizontalTextAlignment="Center" >
                            <Label.GestureRecognizers>
                                 <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnMasterMenuTapped}" />
                             </Label.GestureRecognizers>
                         </Label> 
                     </StackLayout>   
-                    <StackLayout VerticalOptions="CenterAndExpand" IsVisible="{Binding APIhasFailed}">
-                       <Label Text="{Binding ErrorText}" FontSize="Large" TextColor="#58595b" HorizontalTextAlignment="Center" />
-                    </StackLayout>  
+                <StackLayout VerticalOptions="CenterAndExpand" IsVisible="{Binding APIhasFailed}">
+                   <Label Text="{Binding ErrorText}" FontSize="Large" TextColor="#58595b" HorizontalTextAlignment="Center" />
+                </StackLayout>  
                  <StackLayout x:Name="LoaderView" VerticalOptions="CenterAndExpand" IsVisible="{Binding IsLoading}">
                     <ActivityIndicator IsRunning="{Binding Path=IsVisible,Source={x:Reference LoaderView}}" />  
                     <Label Text="Loading..." FontSize="Micro" TextColor="#58595b" HorizontalTextAlignment="Center" />
                   </StackLayout> 
             </StackLayout>
+                </StackLayout>
         </ScrollView>
     </StackLayout>
 </ContentPage>
